--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -29,5 +29,5 @@ jobs:
           huggingface-cli repo create my-gradio-space --type=space --space-sdk=gradio --yes || true
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git remote add hf https://huggingface.com/dravidshankar
+          git remote add hf https://huggingface.co/spaces/dravidshankar/
           git push hf main --force
