--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # ⬅️ Don't use shallow clone
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -24,10 +26,16 @@ jobs:
       - name: Login to Hugging Face CLI
         run: huggingface-cli login --token ${{ secrets.HF_TOKEN }}
 
-      - name: Push to HF Space
+      - name: Create HF Space if not exists
         run: |
-          huggingface-cli repo create my-gradio-space --type=space --space-sdk=gradio --yes || true
-          git config --global user.name "github-actions"
+          huggingface-cli repo create my-gradio-space \
+            --type=space --space-sdk=gradio --yes || true
+
+      - name: Set up Git user and remote
+        run: |
           git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions"
           git remote add hf https://:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/dravidshankar/LLMOPsTM
-          git push hf main --force
+
+      - name: Push code to Hugging Face Space
+        run: git push hf main --force
